tests/NormalTests/paczka1/small_fuzzy/95647390.err
Error in line 1: gy7HWbFz6X S928 87,3
Error in line 2: gy7HWbFz6X S676 23,8
Error in line 6: gy7HWbFz6X S928 34,3
